Fix release on mobile device II.

--- a/src/components/Songs/SongsMenu/SongsMenu.css
+++ b/src/components/Songs/SongsMenu/SongsMenu.css
@@ -80,6 +80,6 @@
   }
 
   .songs-wrapper {
-    padding: 2rem 0 2rem 2.5rem;
+    padding: 2rem 0 2rem 1.5rem;
   }
 }
